Add user/orders endpoint
