# service/UserService.js
@@ -142,22 +142,23 @@ exports.loginUser = async function(body) {
  *
  * returns Cart
  **/
-exports.userCartBuyBooksPOST = async function(userID) {
+exports.userCartBuyBooks = async function(userID) {
     //get the books in the user's cart
     const books = await db.select('bookID', 'copies').from('Cart').where('userID', userID);
-    //create the order associated to the user
-    const orderID = await db('Order').insert([{userID: userID}]).returning('orderID');
     //use an array to create the rows that represent the books (with the number of copies) in the order
     //at each position of the array there is a row
     const numberOfOrderedBooks = books.length;
-    var booksArray = [];
-    for (var i = 0; i < numberOfOrderedBooks; i++) {
-      booksArray[i] = {orderID: orderID[0], bookID: books[i].bookID, copies: books[i].copies};
+    let booksArray = [];
+    //the first insert is done without using the array, in order to get the orderID generated by the database
+    const orderID = await db('Order').insert({bookID: books[0].bookID, copies: books[0].copies, date: new Date(), userID: userID}).returning('orderID');
+    //the for starts from 1 instead of 0 because the first book has just been inserted
+    for (let i = 1; i < numberOfOrderedBooks; i++) {
+      booksArray[i-1] = {orderID: orderID[0], bookID: books[i].bookID, copies: books[i].copies, date: new Date(), userID: userID};
     }
     //all the rows are inserted in the OrderBook table with only 1 insert
     //doing 1 insert for each row would have been less efficient, that's why the array is useful
-    await db('OrderBook').insert(booksArray);
-    const order = await db.select('bookID', 'copies').from('OrderBook').where('orderID', orderID[0]);
+    await db('Order').insert(booksArray);
+    const order = await db.select('bookID', 'copies').from('Order').where('orderID', orderID[0]);
     //delete all the books from the cart, since they have been ordered
     await db('Cart').del().where('userID', userID);
     return {actualResponse: order, status: 201};
@@ -170,7 +171,7 @@ exports.userCartBuyBooksPOST = async function(userID) {
  * bookID Long ID of the book to delete from the cart
  * returns Cart
  **/
-exports.userCartDeleteBookBookIDDELETE = async function(bookID, userID) {
+exports.userCartDeleteBookBookID = async function(bookID, userID) {
     //check if the book with given bookID is in the user's cart
     const books = await db.select().from('Cart').where({userID: userID, bookID: bookID});
     if (books.length <= 0) {
@@ -181,6 +182,40 @@ exports.userCartDeleteBookBookIDDELETE = async function(bookID, userID) {
         await db('Cart').del().where({userID: userID, bookID: bookID});
         const cart = await db.select('bookID', 'copies').from('Cart').where('userID', userID);
         return {actualResponse: cart, status: 200};
+    }
+};
+
+
+exports.getUserOrders = async function(userID) {
+    //check if there is a user with given userID
+    const user = await db.select().from('User').where('userID', userID);
+    if (user.length <= 0) throw {actualResponse: 'User not found', status: 404};
+    else{
+        //get all the orderIDs of the user. They want be unique due to the structure of "Order" table
+        const ordersID = await db.select('orderID').from('Order').where('userID', userID);
+        //make the orderIDs unique
+        let ordersIDArray = [];
+        const numberOfNotUniqueOrdersID = ordersID.length;
+        for (let i = 0; i < numberOfNotUniqueOrdersID; i++){
+            ordersIDArray[i] = ordersID[i].orderID;
+        }
+        //this array contains the unique orderIDs
+        let uniqueOrdersID = [...new Set(ordersIDArray)];
+        const numberOfOrders = uniqueOrdersID.length;
+        const orders = [];
+        for (let i=0; i < numberOfOrders; i++){
+            //get each the data about each order of the user (data about one order for each iteration of the cycle)
+            orders[i] = await db.select('Book.bookID', 'Book.name', 'Order.copies', 'Order.date').from('Order').join('Book', {'Order.bookID' : 'Book.bookID'}).where('orderID', uniqueOrdersID[i]);
+            //make the format of the data to be returned more clear
+            const numberOfBooks = orders[i].length;
+            for (let j=0; j < numberOfBooks; j++){
+                orders[i][j].book = {bookID: orders[i][j].bookID, name: orders[i][j].name };
+                orders[i][j].date = orders[i][j].date.toISOString().slice(0,10);
+                delete orders[i][j].bookID;
+                delete orders[i][j].name;
+            }
+        }
+        return {actualResponse: orders, status: 200};
     }
 };
 
